--- a/src/modules/ReloadFrameModule/styles.lazy.scss
+++ b/src/modules/ReloadFrameModule/styles.lazy.scss
@@ -1,6 +1,5 @@
 #ReloadFrame {
-    position: relative;
-    top: -38px;
-    left: 500px;
+    position: absolute;
+    margin-right: 38px;
     z-index: 99;
 }
